--- a/static/stylesheets/theme.scss
+++ b/static/stylesheets/theme.scss
@@ -31,6 +31,13 @@ header > .container{
   margin-right: 60px;
 }
 
+@media (min-width: $screen-sm-min) {
+  .navbar-brand {
+    margin-right: 0;
+    margin-left: 0;
+  }
+}
+
 .navbar-default{
   background: none;
 
